# container-retention-policy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUG_FIX_MANIFEST_FETCHING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.test  INTEGRATION_TEST_RESULTS.md  LICENSE  MIGRATION.md  MULTIPLATFORM_FIX_PLAN.md  ORPHANED_SHA_BUG_ANALYSIS.md  PR_SUMMARY.md  PR_SUMMARY_UPDATED.md  README.md  action.yaml  action.yml  deny.toml  development.md  inspect_result.json  justfile  main.py  main_tests.py  migration.md  new_readme.md  old_readme.md  performance.md  pyproject.toml  setup.cfg  test.sh  test_scenario_1.sh  test_scenario_2.sh
.claude/: settings.local.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  build.yml  clean_packages.yaml  clean_packages.yml  deploy.yaml  live_test.yaml  release.yaml  retention.yaml  tag.yaml  tag.yml  temp.yaml  test.yaml  test.yml
artifacts/: README.md  container-retention-policy-ARM64-macOS
fuzz/: Cargo.toml
fuzz/fuzz_targets/: matchers.rs  matchers_is_empty.rs  matchers_positive_match.rs
libs/cli/: Cargo.toml
libs/cli/src/: delete_package_versions.rs  input.rs  main.rs  select_package_versions.rs  select_packages.rs
libs/client/: Cargo.toml
libs/client/src/: client.rs  lib.rs  responses.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/matchers/: Cargo.toml
libs/matchers/src/: lib.rs
src/: client.rs  delete_package_versions.rs  input.rs  main.rs  matchers.rs  responses.rs  select_package_versions.rs  select_packages.rs
src/cli/: args.rs  mod.rs  models.rs
src/client/: builder.rs  client.rs  headers.rs  mod.rs  models.rs  urls.rs
src/core/: delete_package_versions.rs  filter_out_multi_arch_children.rs  mod.rs  select_package_versions.rs  select_packages.rs
src/registry/: client.rs  models.rs
tests/: integration_tests.rs
