[workspace]
members = ["libs/*", "fuzz"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
chrono = "0.4.37"
secrecy = "0.8.0"
clap = "4.5.4"
humantime = "2.1.0"

url = { version = "2.5.0" , default-features = false}
color-eyre = { version = "0.6.3", default-features = false }
reqwest = { version = "0.12.2", default-features = false }
tokio = { version = "1.36.0", default-features = false }
tower = { version = "0.4.13", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.115", default-features = false }
