[package]
name = "container-retention-policy"
version = "3.0.0-rc1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}

tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], default-features = false }
indicatif = { version = "0.17.8", default-features = false }
tracing-indicatif = "0.3.6"
chrono = { version="0.4.37" , features=["serde", "clock"], default-features = false}
secrecy = { version =  "0.8.0" }

urlencoding = { version="2.1.3" }
regex = { version = "1.10.4", default-features = false }
humantime = "2.1.0"
wildmatch = { version = "2.3.3" }

serde = { version = "1.0.197", features = ["derive"], default-features = false }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"], default-features = false }
reqwest = {version = "0.12.2", features = ["json", "rustls-tls"], default-features = false }

lazy_static = { version = "1.4.0" , default-features = false}
url = { version = "2.5.0" , default-features = false}
color-eyre = { version = "0.6.3", default-features = false }
tower = { version = "0.4.13", default-features = false, features = ["limit"] }
serde_json = { version = "1.0.115", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.14"
tracing-test = "0.2.4"
wildmatch = { version = "2.3.3" }


[profile.release]
# https://github.com/johnthagen/min-sized-rust
# Optimize release profile for size, as the runtime of the action
# is bottlenecked by GitHub's API response times, not the speed of our code.
lto = true
strip = true
opt-level = "z"
codegen-units = 1
