[tool.poetry]
name = "container-retention-policy"
version = "1.0.0"  # This version doesn't matter - only using Poetry for dependencies
description = "Lets you create a retention policy for GHCR hosted container images"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.18.2"
dateparser = "^1.0.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
types-dateparser = "^1.0.0"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
coverage = {extras = ["toml"], version = "^6.0.2"}
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    "if __name__ == '__main__':",
]
