[tool.poetry]
name = "container-retention-policy"
version = "1.0.0"  # This version doesn't matter - only using Poetry for dependencies
description = "Lets you create a retention policy for GHCR hosted container images"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23"
dateparser = "^1.0.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
types-dateparser = "*"
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
pytest-cov = "*"
coverage = {extras = ["toml"], version = "*"}
pytest-socket = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    "if __name__ == '__main__':",
]
