[package]
name = "container-retention-policy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
_matchers = {path = "../libs/matchers"}

libfuzzer-sys = "0.4"

[[bin]]
name = "matchers"
path = "fuzz_targets/matchers.rs"
test = true

[[bin]]
name = "matchers_negative_match"
path = "fuzz_targets/matchers_negative_match.rs"
test = true

[[bin]]
name = "matchers_positive_match"
path = "fuzz_targets/matchers_positive_match.rs"
test = true

[[bin]]
name = "matchers_is_empty"
path = "fuzz_targets/matchers_is_empty.rs"
test = true
