[package]
name = "container-retention-policy"
version = "3.0.0-rc1"
edition = "2021"
license = "MIT"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_client = { path = "../client" }
_core = { path = "../core" }
_matchers = { path = "../matchers" }

clap = { version = "4.5.4", features = ["derive"]}
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry", "fmt", "ansi"], default-features = false }
regex = "1.10.4"
indicatif = { version = "0.17.8", features = ["tokio"] }
lazy_static = { version = "1.4.0" , default-features = false}

tracing.workspace = true
humantime.workspace = true
tracing-indicatif.workspace = true
chrono = { workspace=true , features=["serde"]}
serde_json = { workspace = true, default-features = false }
color-eyre = { workspace = true, default-features = false}
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"], default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"], default-features = false }  # TODO: Slim down
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0.14"
tracing-test = "0.2.4"
url = { workspace = true , default-features = false}
wildmatch = { version = "2.3.3" }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
# Optimize release profile for size, as the runtime of the action
# is bottlenecked by GitHub's API response times, not the speed of our code.
lto = true
strip = true
opt-level = "z"
codegen-units = 1
