[package]
name = "_client"
version = "3.0.0-rc1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
_core = { path="../core" }

tracing.workspace = true
tracing-indicatif.workspace = true

chrono = { workspace=true , features=["serde"]}
color-eyre = { workspace = true, default-features = false}
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"], default-features = false }  # TODO: Slim down
tower = { workspace = true, features = ["limit", "buffer"], default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
secrecy = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, default-features = false }

url = { workspace = true , default-features = false}
urlencoding = "2.1.3"
